<resources>
    <string name="app_name">Trip Planner</string>

    <string name="key_google_apis_android" translatable="false">AIzaSyCHussXXaNuVO5CUY-hDF9NG_b52_T2AuE</string>
    <string name="key_google_apis_maps" translatable="false">AIzaSyCHussXXaNuVO5CUY-hDF9NG_b52_T2AuE</string>
    <string name="mapbox_key" translatable="false">pk.eyJ1IjoicmF3YXR0ZXN0IiwiYSI6ImNrNm5hcWdxaTB2dDkzb3BhY2M5ajgzaXMifQ.2otV6iBbn8EhK6GyRRN-Yw</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Places</string>
    <string name="slide_1_desc">Find amazing places,book experiences,and help us spred the power of travel.</string>

    <string name="slide_2_title">Enjoyment</string>
    <string name="slide_2_desc">Lets enjoy on vocation with trip planning.</string>

    <string name="slide_3_title">Best Experience</string>
    <string name="slide_3_desc">All features of app gives you amazing experice.</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_a">Forgot Password</string>
    <string name="get_started">Get Started</string>
    <string name="register">Register</string>
    <string name="email_id">Email id</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="phoneno">Phone no</string>
    <string name="home">Home</string>
    <string name="admin_home">Admin home</string>

    <!--BottomAppBar-->
    <string name="bottom_app_bar_chevron_content_desc">Open or close bottom navigation drawer</string>
    <string name="bottom_app_bar_logo_content_desc">Reply logo</string>
    <string name="bottom_nav_drawer_profile_image_content_desc">profile avatar image</string>
    <string name="fab_compose_email_content_description">Compose new email</string>
    <string name="fab_reply_email_content_description">Reply to email</string>

    <!--BottomSheet menus-->
    <string name="menu_item_forward">Forward</string>
    <string name="menu_item_reply">Reply</string>
    <string name="menu_item_reply_all">Reply all</string>
    <string name="menu_item_archive">Archive</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_star">Star</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_settings">Settings</string>

    <string name="menu_dark_theme_light">Light</string>
    <string name="menu_dark_theme_dark">Dark</string>
    <string name="menu_dark_theme_battery_saver">Set by Battery Saver</string>
    <string name="menu_dark_theme_system_default">System default</string>

    <!--BottomNavigationDrawer-->
    <string name="navigation_inbox">Inbox</string>
    <string name="navigation_starred">Starred</string>
    <string name="navigation_sent">Send</string>
    <string name="navigation_trash">Trash</string>
    <string name="navigation_spam">Spam</string>
    <string name="navigation_drafts">Drafts</string>

    <!--HomeFragment-->
    <string name="email_sender_profile_content_desc">Profile image of sender</string>
    <string name="navigate_back_icon_content_desc">Navigate back</string>

    <!--EmailFragment-->
    <string name="email_recipient_to">To %1$s</string>
    <string name="email_card_transition_name">email_card_%1$s</string>

    <!--ComposeFragment-->
    <string name="compose_close_content_desc">Close editing email</string>
    <string name="compose_send_content_desc">Send email</string>
    <string name="compose_add_recipient_icon_content_desc">Add recipient</string>
    <string name="compose_subject_hint">Subject</string>
    <string name="compose_body_hint">New message…</string>
    <string name="compose_recipient_group_content_desc">Recipients</string>
    <string name="search">Search</string>
    <string name="destination">Destination</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="submit">Submit</string>
</resources>
