<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentBottom="true"
            android:padding="10dp"
            android:src="@drawable/back"
            android:tint="@color/mdtp_white"></ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_regular"
            android:paddingBottom="10dp"

            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="22dp" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/happy">


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toTopOf="@+id/txtForgotPass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/userLay"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/colorBlack">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:drawableStart="@drawable/user"
                        android:drawablePadding="5dp"
                        android:digits="_,abcdefghijklmnopqrstuvwxyz,ABCDEFGHIJKLMNOPQUSTUVWXYZ"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/username"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="18sp">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passLay"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:textColorHint="@color/colorBlack">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:drawableStart="@drawable/lock"
                        android:drawablePadding="5dp"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="18sp"></com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.tuyenmonkey.mkloader.MKLoader
                    android:id="@+id/mkloader"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    app:mk_color="@color/colorPrimary"
                    app:mk_type="TwinFishesSpinner" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bg_button"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:paddingStart="80dp"
                    android:paddingEnd="80dp"
                    android:text="Login"
                    android:textColor="#FFF" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView

            android:id="@+id/txtForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>



