<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"


        android:orientation="vertical">



        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/colorPrimary">
            <ImageView
                android:id="@+id/back"
                android:layout_alignParentBottom="true"
                android:padding="10dp"
                android:tint="@color/mdtp_white"
                android:src="@drawable/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></ImageView>
            <TextView
                android:id="@+id/titleTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:fontFamily="@font/poppins_regular"
                android:paddingBottom="10dp"

                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="22dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/register_bg3"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userLay"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:hint="Username"
                android:textColorHint="@color/colorBlack"
                app:hintTextColor="@color/colorBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="_,abcdefghijklmnopqrstuvwxyz,ABCDEFGHIJKLMNOPQUSTUVWXYZ,0123456789"
                    android:drawableStart="@drawable/user"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/reply_black_900">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:textColorHint="@color/colorBlack"
                app:hintTextColor="@color/colorBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="abcdefghijklmnopqrstuvwxyz,ABCDEFGHIJKLMNOPQUSTUVWXYZ "
                    android:drawableStart="@drawable/user"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="18sp"></com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:textColorHint="@color/colorBlack"
                app:hintTextColor="@color/colorBlack">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/email"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/email_id"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"

                    android:singleLine="true"
                    android:textColorHint="@color/mdtp_background_color"
                    android:textSize="18sp"></com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:textColorHint="@color/colorBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/phone"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/phoneno"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="18sp"></com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:textColorHint="@color/colorBlack"
                app:hintTextColor="@color/colorBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:drawableStart="@drawable/location1"
                    android:drawablePadding="5dp"
                    android:focusable="false"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/location"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"

                    android:singleLine="true"
                    android:textSize="18sp"></com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

            <!--<com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/pin"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/country"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:singleLine="true"></com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/pin"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/state"
                    android:imeOptions="actionNext"
                    android:maxLines="1"

                    android:singleLine="true"></com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>-->


            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:textColorHint="@color/colorBlack"
                app:hintTextColor="@color/colorBlack"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/lock"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"

                    android:singleLine="true"
                    android:textSize="18sp"></com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:textColorHint="@color/colorBlack"
                app:hintTextColor="@color/colorBlack"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtConfPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/lock"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"

                    android:singleLine="true"
                    android:textSize="18sp">

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

            <com.tuyenmonkey.mkloader.MKLoader
                android:id="@+id/mkloader"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                app:mk_color="@color/colorPrimary"
                app:mk_type="TwinFishesSpinner" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_below="@+id/btnGetStarted"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/bg_button"
                android:fontFamily="@font/poppins_semi_bold"
                android:paddingStart="80dp"
                android:paddingEnd="80dp"
                android:text="@string/register"
                android:textColor="#FFF"></androidx.appcompat.widget.AppCompatButton>
        </LinearLayout>
    </LinearLayout>
</ScrollView>